added OperationResult GenericRepository

--- a/InfrastructureLayer/InfrastructureLayer.csproj
+++ b/InfrastructureLayer/InfrastructureLayer.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\DomainLayer\DomainLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
